# AxioPoC

./: .coveragerc  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
REPORTS/: README_addendum.md  afd_baseline.md  metrics_consolidated.csv
appetition_aversion/: __init__.py  regulator.py
benchmarks/: EXPERIMENTS.md  README.md  rfa_ntel.py  text2ntel.backup.py  text2ntel.py
common/: __init__.py  utils.py
examples/: memotion_demo.py  ntel_chain.py  ntel_examples.py  run_demo.py
memotion_decay/: __init__.py  decay.py
negentropy_telotopic/: __init__.py  __main__.py  ntel.py
scripts/: Check-FinalPoC.ps1  README.md  afd_add_len_qmark.py  afd_align_eval.py  afd_build_messages_from_convokit_min.py  afd_build_r_slope.py  afd_download_export.py  afd_fill_r_slope_from_windows.py  afd_join_outcomes.py  afd_make_balanced.py  afd_make_balanced_align.py  afd_make_balanced_for_eval.py  afd_merge_features_vader.py  afd_outcomes_from_meta.py  afd_perm_importance.py  afd_prepare.py  afd_prepare_from_join.py  afd_probe_meta.py  afd_rebuild_from_convokit.py  afd_select_labeled_messages.py  bootstrap_axis_stability.py  bootstrap_transfer_ci.py  check_csv.py  cleanup_final.ps1  cleanup_onedrive_axio_poc.ps1  cleanup_onedrive_duplicates.ps1  cmv_build_messages_from_webis.py  cmv_threads_to_messages.py  collect_metrics.py  compare_afd_messages.py  compare_axis_runs.py  compare_face_validity_runs.py  compute_vader_by_thread.py  convert_rfa_to_csv.py  download_cmv_convokit.py  eval_auc_any.py  eval_auc_from_features.py  eval_da.py  eval_da_transfer.py  (+45 more)
(+27 files in other folders)
